# ChangeLog for net-p2p/sancho-bin
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/sancho-bin/ChangeLog,v 1.32 2006/06/06 21:06:25 sekretarz Exp $

  07 Jun 2006; Karol Wojtaszek <sekretarz@gentoo.org>
  -sancho-bin-0.9.4.17.ebuild, -sancho-bin-0.9.4.19.ebuild,
  -sancho-bin-0.9.4.20.ebuild, -sancho-bin-0.9.4.21.ebuild,
  -sancho-bin-0.9.4.52.ebuild, -sancho-bin-0.9.4.54.ebuild,
  sancho-bin-0.9.4.56.ebuild:
  Stable on amd64, clean up

  06 Jun 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  sancho-bin-0.9.4.56.ebuild:
  Stable on x86.

*sancho-bin-0.9.4.56 (19 Jan 2006)

  19 Jan 2006; Karol Wojtaszek <sekretarz@gentoo.org>
  +sancho-bin-0.9.4.56.ebuild:
  Version bump, added modular-x deps, ~amd64 keyworded

*sancho-bin-0.9.4.54 (08 Jan 2006)

  08 Jan 2006; Karol Wojtaszek <sekretarz@gentoo.org>
  +sancho-bin-0.9.4.54.ebuild:
  Version bump, bug #117769

*sancho-bin-0.9.4.52 (29 Nov 2005)

  29 Nov 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  +sancho-bin-0.9.4.52.ebuild:
  Version bump, bug #76163

  05 Oct 2005; Simon Stelling <blubb@gentoo.org> sancho-bin-0.9.4.21.ebuild:
  add emul-gtklibs dependency to fix bug 107726

  20 Sep 2005; <mkay@gentoo.org> sancho-bin-0.9.4.17.ebuild,
  sancho-bin-0.9.4.19.ebuild, sancho-bin-0.9.4.20.ebuild,
  sancho-bin-0.9.4.21.ebuild:
  Removing old einfo about gtk2 flag

  16 Sep 2005; Ciaran McCreesh <ciaranm@gentoo.org> ChangeLog:
  Converted to UTF-8, fixed encoding screwups

  11 Aug 2005; Luis Medinas <metalgod@gentoo.org>
  sancho-bin-0.9.4.19.ebuild:
  Added ~amd64 keywords. Closes bug #95434.

  23 Nov 2004; Jon Hood <squinky86@gentoo.org> sancho-bin-0.9.4.19.ebuild:
  Stable on x86.

*sancho-bin-0.9.4.21 (06 Nov 2004)

  06 Nov 2004; Jon Hood <squinky86@gentoo.org> -sancho-bin-0.9.4.11.ebuild,
  -sancho-bin-0.9.4.14-r1.ebuild, -sancho-bin-0.9.4.16.ebuild,
  sancho-bin-0.9.4.17.ebuild, +sancho-bin-0.9.4.21.ebuild: