@@ -6,14 +6,19 @@ MD5 9c8935033c3fe62be83d6ad6e80d5f4e files/sancho.sh 260
 RMD160 a99e106ea57d81b66c778206d25a2e2bd65e1c88 files/sancho.sh 260
 SHA256 1debe12b7d47d67f42dc97d291d11ffe73cc9cdb7b988a375be19326fd7593a8 files/sancho.sh 260
 DIST sancho-0.9.4-56-linux-gtk.tar.bz2 4687436 RMD160 b6841eee55b10a0428d1bb5a52a76f370c6bd248 SHA1 f11ba3cbb22588d5f125790b8f60ad84e0395be7 SHA256 072173087e69750efb9437946dca83d14c52384ff3045d810818a1dfb11a96e6
+DIST sancho-0.9.4-57-linux-gtk.tar.bz2 5360001 RMD160 4438631dd0f4d4f58eb33328da2a798fd1334749 SHA1 8b4944c99448517a464b80a91e2f102b7595016c SHA256 438b608509bcbf29207b1a23aed59c3d410aa3dbc15fe88b956f8598a3bcc277
 EBUILD sancho-bin-0.9.4.56.ebuild 1260 RMD160 d86828bad7a90c11d81e6210bbd76210c69d62da SHA1 fcfb5e9b826b305510cc5b7c97d882b97f111bf2 SHA256 bfe0f385f898b4839456798ef01cd13cc5c257c731bcae5f29b4945872d09ae6
 MD5 f62f262ca4b3a3df000ac5f3748051c7 sancho-bin-0.9.4.56.ebuild 1260
 RMD160 d86828bad7a90c11d81e6210bbd76210c69d62da sancho-bin-0.9.4.56.ebuild 1260
 SHA256 bfe0f385f898b4839456798ef01cd13cc5c257c731bcae5f29b4945872d09ae6 sancho-bin-0.9.4.56.ebuild 1260
-MISC ChangeLog 5536 RMD160 e2a9960cbd364d906f7708733a4f273817d939c3 SHA1 838085395f7b6e6b932b29c0c4789e64d4ecbd3e SHA256 59647e88a4011fab9e2b777948fbbfd8de636445312eaf9d3276ba31c9f4bb4f
-MD5 1e1162a6f2b8ca9074048eb7d95fcccd ChangeLog 5536
-RMD160 e2a9960cbd364d906f7708733a4f273817d939c3 ChangeLog 5536
-SHA256 59647e88a4011fab9e2b777948fbbfd8de636445312eaf9d3276ba31c9f4bb4f ChangeLog 5536
+EBUILD sancho-bin-0.9.4.57.ebuild 1343 RMD160 173bfde2f07db9b7ca5ce9eb8dc42adafa8dbd57 SHA1 97513c168ade10e1e5b28f06aac5d2912bbaf1ea SHA256 3e5a1b52a2c6b9720a821da52ce57cd513978a343ea2d2e0184f3a3307324008
+MD5 0725d23bfaf4acad3e7098c4b97154a3 sancho-bin-0.9.4.57.ebuild 1343
+RMD160 173bfde2f07db9b7ca5ce9eb8dc42adafa8dbd57 sancho-bin-0.9.4.57.ebuild 1343
+SHA256 3e5a1b52a2c6b9720a821da52ce57cd513978a343ea2d2e0184f3a3307324008 sancho-bin-0.9.4.57.ebuild 1343
+MISC ChangeLog 5720 RMD160 d59edcb911eb11442c90e3bd5736b812cbc4f1f2 SHA1 d4cca0b57b825a673e97bc86c24272985be9e1ce SHA256 d3fb372f75dbdfa2c106cf66e0dac38a9d8ba1170974199321f87a697cbec183
+MD5 fd7525137f4e7449701659e25c8eaa31 ChangeLog 5720
+RMD160 d59edcb911eb11442c90e3bd5736b812cbc4f1f2 ChangeLog 5720
+SHA256 d3fb372f75dbdfa2c106cf66e0dac38a9d8ba1170974199321f87a697cbec183 ChangeLog 5720
 MISC metadata.xml 160 RMD160 828887200387b28c37fc97111fc6bc3a0a2fcccd SHA1 813ef5bc57f6a8d95e7cab7a745a2a824858f49c SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f
 MD5 8aefbc0e49db723ca1ad02d0c409cd49 metadata.xml 160
 RMD160 828887200387b28c37fc97111fc6bc3a0a2fcccd metadata.xml 160
@@ -21,10 +26,13 @@ SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f metadata
 MD5 6ed3a73d1efffb10062462e8dff1182b files/digest-sancho-bin-0.9.4.56 283
 RMD160 ab43031fe01f603c597445d947474267cf1b6b6f files/digest-sancho-bin-0.9.4.56 283
 SHA256 746f8346ba857ea4d1520bdc9ae7521929a3e5d5bb32d7d1febca662f2908077 files/digest-sancho-bin-0.9.4.56 283
+MD5 ff601eaa82fbfe75bad60d88a314fd4e files/digest-sancho-bin-0.9.4.57 283
+RMD160 9d20a688b4e82ed64bbe83abd3bf064c77b7799d files/digest-sancho-bin-0.9.4.57 283
+SHA256 d4fc673bb51f09a3adec9c68017c7e480b0342d02a91a892327d607bb0107f63 files/digest-sancho-bin-0.9.4.57 283
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFEhmNsub4+zaPCR/oRAn3pAJ9d/fMLE4sglbOZsk/ZuT3cAx+LqQCghGnm
-fC3quLA9F/2bco4VwK8RkrE=
-=Y9rG
+iD8DBQFEhmg9ub4+zaPCR/oRAko4AJ94WhbSv4PNFc306zoU+PWRdZ1HYgCgkf9O
+h6mFPgN/57uJ70WYYOu8A+U=
+=K4K2
 -----END PGP SIGNATURE-----
