@@ -1,0 +1,3 @@
+MD5 193c75415869402888ff6172d676e44f sancho-0.9.4-57-linux-gtk.tar.bz2 5360001
+RMD160 4438631dd0f4d4f58eb33328da2a798fd1334749 sancho-0.9.4-57-linux-gtk.tar.bz2 5360001
+SHA256 438b608509bcbf29207b1a23aed59c3d410aa3dbc15fe88b956f8598a3bcc277 sancho-0.9.4-57-linux-gtk.tar.bz2 5360001
